v0.5.7
- ISSUE-8 : find return a FluentList<FluentWebElement>
- ISSUE-26 : Polish pollingEvery features
- ISSUE-22 : Fix bug on hasAttribute
- ISSUE-21 : use @BeforeMethod instead of @BeforeTest
- Add methods on fest assert : hasText, hasNotText, hasSize
- ISSUE-28 : Add custom message when await fail
- add @AjaxElement : wait for element to be found on a page context
v 0.5.5
- Adding eq ne le lt ge gt to the asynchronous api m thanks to Cecile Hui Bon Hoa and Khanh Tuong Maudoux
- Change on maven structure
- Adding first draft of the testNG extension
- Provide an adapter to simplify extension of the framework
v 0.5.4
- Migration to org.fluentlenium
- update to selenium 2.16.1
v 0.5.3
- fix bugs notStartsWith and notEndsWith
- deprecated the withXXX(Matcher) syntax. Use now withXXX().+convenientMethods
- add asynchronous call await
v 0.5.2 :
FluentLenium FestAssert :
- add page fest assert assertions
FluentLenium Core :
- no NPE if driver is null
- update to selenium java 2.12
- add automatic proxied instance on FluentWebElement inside a page
- moving matcher construction from FilterConstructor to MatcherConstructor